--- a/Web/Pages/Contact.cshtml
+++ b/Web/Pages/Contact.cshtml
@@ -5,7 +5,17 @@
 @{
     ViewData["Title"] = Localizer["Contact"];
 }
-
+<nav role="navigation" id="wb-bc" property="breadcrumb">
+    <h2>
+        @Localizer["You are here:"]
+    </h2>
+    <div class="row">
+        <ol class="breadcrumb">
+            <li><a asp-page="Index">@Localizer["Home"]</a></li>
+            <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Contact"]</a></li>
+        </ol>
+    </div>
+</nav>
 <section role="contentinfo">
     <div class="col-lg-9 col-sm-9">
         <h2>@Localizer["Inquiry"]</h2>
