Fix Layout for Similar Search Details & Edit

--- a/Admin/Pages/Similar/Details.cshtml
+++ b/Admin/Pages/Similar/Details.cshtml
@@ -70,9 +70,10 @@
                                 {
                                     <div class="row">
                                         <div class="col-12">
-                                            <a class="btn btn-link col-10 text-left">
-                                                @position.JobGroupLevelCode @position.JobTitleEng / @position.JobTitleFre
+                                            <a class="btn btn-link col-12 text-left text-wrap">
+                                                 @position.JobGroupLevelCode @position.JobTitleEng / @position.JobTitleFre 
                                             </a>
+                                            <hr />
                                         </div>
                                     </div>
                                 }
@@ -130,9 +131,10 @@ else if (Model.PercentSelection == "90")
                                 {
                                     <div class="row">
                                         <div class="col-12">
-                                            <a class="btn btn-link col-10 text-left">
+                                            <a class="btn btn-link col-12 text-left text-wrap">
                                                 @position.JobGroupLevelCode @position.JobTitleEng / @position.JobTitleFre
                                             </a>
+                                            <hr />
                                         </div>
                                     </div>
                                 }
@@ -190,9 +192,10 @@ else if (Model.PercentSelection == "80")
                                 {
                                     <div class="row">
                                         <div class="col-12">
-                                            <a class="btn btn-link col-10 text-left">
+                                            <a class="btn btn-link col-12 text-left text-wrap">
                                                 @position.JobGroupLevelCode @position.JobTitleEng / @position.JobTitleFre
                                             </a>
+                                            <hr />
                                         </div>
                                     </div>
                                 }
@@ -250,9 +253,10 @@ else if (Model.PercentSelection == "70")
                                 {
                                     <div class="row">
                                         <div class="col-12">
-                                            <a class="btn btn-link col-10 text-left">
+                                            <a class="btn btn-link col-12 text-left text-wrap">
                                                 @position.JobGroupLevelCode @position.JobTitleEng / @position.JobTitleFre
                                             </a>
+                                            <hr />
                                         </div>
                                     </div>
                                 }
