--- a/Admin/Pages/Similar/Edit.cshtml
+++ b/Admin/Pages/Similar/Edit.cshtml
@@ -182,9 +182,10 @@
                                 };
                                             }
                                             <button class="btn btn-link" asp-page-handler="deleteonehundredpercentsimilarposition" asp-all-route-data="@routedataremove">REMOVE</button>
-                                            <a class="btn btn-link col-10 text-left">
+                                            <a class="btn btn-link col-12 text-left text-wrap">
                                                 @position.JobGroupLevelCode @position.JobTitleEng / @position.JobTitleFre
                                             </a>
+                                            <hr />
                                         </div>
                                     </div>
                                 }
@@ -358,9 +359,10 @@ else if (Model.PercentSelection == "90")
                                 };
                                             }
                                             <button class="btn btn-link" asp-page-handler="deleteninetypercentsimilarposition" asp-all-route-data="@routedataremove">REMOVE</button>
-                                            <a class="btn btn-link col-10 text-left">
+                                            <a class="btn btn-link col-12 text-left text-wrap">
                                                 @position.JobGroupLevelCode @position.JobTitleEng / @position.JobTitleFre
                                             </a>
+                                            <hr />
                                         </div>
                                     </div>
                                 }
@@ -535,9 +537,10 @@ else if (Model.PercentSelection == "80")
                                 };
                                             }
                                             <button class="btn btn-link" asp-page-handler="deleteeightypercentsimilarposition" asp-all-route-data="@routedataremove">REMOVE</button>
-                                            <a class="btn btn-link col-10 text-left">
+                                            <a class="btn btn-link col-12 text-left text-wrap">
                                                 @position.JobGroupLevelCode @position.JobTitleEng / @position.JobTitleFre
                                             </a>
+                                            <hr />
                                         </div>
                                     </div>
                                 }
@@ -712,9 +715,10 @@ else if (Model.PercentSelection == "70")
                                 };
                                             }
                                             <button class="btn btn-link" asp-page-handler="deleteseventypercentsimilarposition" asp-all-route-data="@routedataremove">REMOVE</button>
-                                            <a class="btn btn-link col-10 text-left">
+                                            <a class="btn btn-link col-12 text-left text-wrap">
                                                 @position.JobGroupLevelCode @position.JobTitleEng / @position.JobTitleFre
                                             </a>
+                                            <hr />
                                         </div>
                                     </div>
                                 }
